istio/6-istio-rules.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: webapp
  namespace: default
spec:
  hosts:
    - webapp.default.svc.cluster.local
  http:
    - route:
        - destination:
            host: webapp.default.svc.cluster.local
            subset: v1
          weight: 90
        - destination:
            host: webapp.default.svc.cluster.local
            subset: v2
          weight: 10
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: webapp
  namespace: default
spec:
  host: webapp.default.svc.cluster.local
  subsets:
    - labels:
        version: v1
      name: v1
    - labels:
        version: v2
      name: v2
